# pyverificac19

./: .flake8  .gitignore  LICENSE  Makefile  README.md  README.rst  conftest.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
examples/: service.py  spike_recovery.py  spike_verifier.py  try_sum.py  verifier.py
tests/: 3  test_crl_mongo.py  test_dcc.py  test_service.py  test_verifier.py
tests/cache_data/: dsc.json  settings.json
tests/data/: raw_dsc
tests/data/mock_request/: certificate_status.json  crl_check.json  dsc_whitelist.json
tests/service/: setup.py  test_service.py  utils.py
tests/setup/: __init__.py  service.py
tests/utils/: __init__.py  dcc.py  json.py
tests/verifier/: test_base.py
verificac19/: __init__.py  exceptions.py  service.py  verifier.py
verificac19/service/: __init__.py  _cache.py  _http.py  _mongo_crl.py  _settings.py  service.py
verificac19/service/cache_data/: dsc.json  settings.json
verificac19/service/crl/: _crl.py  check.py  chunk.py  crl_check.py  download.py  mongo.py  ucvis.py  uvcis.py
verificac19/verifier/: __init__.py  common.py  decorators.py  interface.py  result.py  verifier.py
verificac19/verifier/asserters/: __init__.py  base_asserter.py  test_base_asserter.py
verificac19/verifier/base_asserters/: base_asserter.py
verificac19/verifier/certificate_types_verification/: base.py
verificac19/verifier/common/: info.py  result.py
verificac19/verifier/types/: __init__.py  base_verifier.py  vaccination.py
verificac19/verifier/verifier_types/: __init__.py  base.py  (+1 more)
(+10 files in other folders)
