[metadata]
name = verificac19
description = VerificaC19 SDK for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lotrekagency/pyverificac19
license = MIT
author = Lotrèk Digital Agency
author_email = dimmitutto@lotrek.it
keywords = c19
classifiers =
        Intended Audience :: Developers
        Programming Language :: Python
        Programming Language :: Python :: 3
[options]
packages = find:
include_package_data = True
python_requires = >= 3.0.*
install_requires =
    requests==2.26.01
    dcc-utils==0.1.0
[bdist_wheel]
universal=true
[semantic_release]
version_variable = verificac19/__init__.py:__version__